@@ -22,6 +22,10 @@ Version 1.8.3
        shown in blame. (Stefan)
 - BUG: Issue #566: Wrong encoding detection
        in TortoiseBlame. (Stefan)
+- BUG: Issue #567: too many rename
+       suggestions. (Stefan)
+- BUG: Issue #568: missing autocompletion for
+       filenames with '-'. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
